@@ -61,3 +61,4 @@ Not about the JSON format, but they might help you.
 -   [Multiple Lines](./tips/multi_lines): How to run multiple commands in a process.
 -   [Unicode Characters](./tips/unicode): Tuw supports UTF-8!
 -   [Safe Mode](./tips/safe_mode): You can check commands without executing them.
+-   [JSON with Comments](./tips/comments): Tuw supports C-style comments in JSON files.
