@@ -1,7 +1,6 @@
 # Minimal GUI
 
-Tuw will read `./gui_definition.json` when launching the executable.  
-You can define a GUI in the JSON file.  
+Tuw will read `./gui_definition.json` (or `./gui_definition.jsonc`) when launching the executable. You can define a GUI in the JSON file.  
   
 The following JSON is for a minimal GUI that you can create.  
 It has only a button to echo `Hello!`.  
