@@ -1,0 +1,15 @@
+{
+    // Single-line comment
+    /*
+     * Multi-line comment
+     */
+    "gui": [
+        {
+            "label": "JSON with Comments",
+            "command": "echo Hello!",
+            "components": [],
+            // You can put a trailing comma after the last element.
+            "": "",
+        }
+    ]
+}
