@@ -26,6 +26,13 @@ TEST(JsonCheckTest, LoadJsonFail2) {
     EXPECT_STREQ(expected, result.msg.substr(0, 68).c_str());
 }
 
+TEST(JsonCheckTest, LoadJsonWithComments) {
+    // Check if json parser supports c-style comments and trailing commas.
+    rapidjson::Document test_json;
+    json_utils::JsonResult result = json_utils::LoadJson(JSON_RELAXED, test_json);
+    EXPECT_TRUE(result.ok);
+}
+
 void GetTestJson(rapidjson::Document& json);
 
 TEST(JsonCheckTest, LoadJsonSuccess) {
