@@ -1,3 +1,6 @@
+- Added support for C-style comments and trailing commas in JSON files.
+- Added support for .jsonc files.
+
 ver 0.7.0
 - Added options for string validation.
 - Added support for colorized output on Windows.
